Fix overflow of listing section

--- a/resources/css/bem/oauth-client.less
+++ b/resources/css/bem/oauth-client.less
@@ -18,6 +18,8 @@
   }
 
   &__details {
+    overflow-wrap: anywhere;
+
     &--button {
       .reset-input();
       text-align: left;
